# deprecated-web-ui

./: .gitignore  .travis.yml  Makefile.am  README.md  bower.json  configure.ac  sonar-project.properties
app/: 404.html  index.html
app/scripts/: app.js
app/scripts/controllers/: ConfirmationController.js  CustomScanController.js  DetailRapportModalController.js  InformationController.js  JournalController.js  MainController.js  ParametersController.js  RapportDetailsController.js  ScanController.js  StatusController.js  customAnalyseController.js
app/scripts/filters/: strLimit.js
app/scripts/filters/languages/: en_US.js  fr_FR.js
app/scripts/services/: BrowseService.js  ScanData.js  ScanService.js  StatusService.js
app/styles/: journal-tab.css  main.css  parameters-tab.css  scan-tab.css  status-tab.css
app/views/: Confirmation.html  CustomScan.html  DetailRapportModal.html  Information.html  Journal.html  Main.html  Parameters.html  RapportDetails.html  Scan.html  Status.html  customAnalyse.html
httpd/: Makefile.am  apiclient.c  apiclient.h  httpd.h  log.c  main.c
scripts/: update_bower_binaries_list.sh
systray/: .gitignore  Makefile.am  apiclient.c  apiclient.h  armadito-systray.c  armadito-systray.h  autogen.sh  configure.ac  jutil.c  jutil.h  org.armadito.systray.desktop  org.armadito.systray.xml
systray/linux/: appindicator.c  appindicator.gresource.xml  appindicator.h
test/spec/services/: browseservice.js
web/: Gruntfile.js  Makefile.am  bower.json  configure.ac
web/app/: index.html
web/app/scripts/: app.js
web/app/scripts/controllers/: ConfirmationController.js  CustomAnalyseController.js  InformationController.js  MainController.js  ScanController.js
web/app/scripts/filters/: strLimit.js
web/app/scripts/filters/languages/: en_US.js  fr_FR.js
web/app/scripts/services/: BrowseService.js  ScanData.js  ScanDataFactory.js  ScanService.js  StatusService.js
web/app/styles/: history-tab.css  journal-tab.css  main.css  scan-tab.css  status-tab.css
web/app/views/: CustomAnalyse.html  CustomScan.html  Information.html  Journal.html  Main.html  Scan.html
